--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,9 @@
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"test": "vitest",
-		"backfill": "node scripts/backfill.js"
+		"backfill": "node scripts/backfill.js",
+		"cron:dev": "wrangler dev --test-scheduled",
+		"cron:trigger": "curl 'http://localhost:8787/__scheduled?cron=*+*+*+*+'"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
@@ -17,9 +19,9 @@
 	},
 	"dependencies": {
 		"@farcaster/quick-auth": "^0.0.7",
+		"@neondatabase/serverless": "^1.0.1",
 		"dotenv": "^17.2.0",
 		"hono": "^4.8.5",
-		"pg": "^8.16.3",
 		"viem": "^2.33.0"
 	}
 }
